<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerInfoPelicula">


    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="268dp"
                android:layout_marginTop="28dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/Director"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/director"
                android:textSize="20dp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/genero"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/genero"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/nombre"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/sinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinopsis"
                android:padding="5dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/jugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/beige"
                android:onClick="jugarpuzzle"
                android:text="@string/jugar" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>